src/test/ui/borrowck/disallow-possibly-uninitialized.stderr
error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/disallow-possibly-uninitialized.rs:6:5
   |
LL |     t.0 = 1;
   |     ^^^^^^^ use of possibly-uninitialized `t`

error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/disallow-possibly-uninitialized.rs:11:5
   |
LL |     t.1 = 1;
   |     ^^^^^^^ use of possibly-uninitialized `t`

error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/disallow-possibly-uninitialized.rs:16:5
   |
LL |     t.0 = 1;
   |     ^^^^^^^ use of possibly-uninitialized `t`

error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/disallow-possibly-uninitialized.rs:20:5
   |
LL |     t.0 = 1;
   |     ^^^^^^^ use of possibly-uninitialized `t`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0381`.
